<resources>
    <string name="app_name">Newws</string>
    <string name="news">News</string>
    <string name="top">Top</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favs">Favs</string>
    <string name="content_button">Favs_Button</string>
    <string name="news_image">News_Image</string>
    <string name="placeholder_title">Title</string>
    <string name="source_placeholder">News.com</string>
    <string name="date_placeholder">Published at 4/23/2022</string>
    <string name="content_placeholder">content lorem ipsun dolor lacrime tolomeo at nute secteo o dolorae...</string>
    <string name="search_hint">Search News Here</string>
    <string name="author_placeholder">Author: John Doe</string>
    <string name="technology">technology</string>
    <string name="general">general</string>
    <string name="sports">sports</string>
    <string name="entertainment">entertainment</string>
    <string name="science">science</string>
    <string name="health">health</string>
    <string name="business">business</string>
    <string name="yes">yes</string>
    <string name="add_this_article_to_favorites">add this Article to Favorites</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
</resources>