<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="article"
            type="com.erapps.newws.data.models.Article" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:id="@+id/linearLayoutFavs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/ivFavsItem"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/news_image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_news" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/tvFavsItemTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_title"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:text="@{article.title}" />

                    <TextView
                        android:id="@+id/tvFavsItemSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/source_placeholder"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:text="@{article.source.name}" />

                    <TextView
                        android:id="@+id/tvFavsItemContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/content_placeholder"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        app:text="@{article.content}" />

                </LinearLayout>

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFavsItemAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:text="@string/author_placeholder" />

                    <TextView
                        android:id="@+id/tvFavsItemDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:text="@string/date_placeholder" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>